[package]
name = "crypto_streams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.28", default-features = false }
prost = { version = "0.11.9", default-features = false }
tokio = { version = "1.29.1", features = ["net", "macros", "rt-multi-thread"], default-features = false }
tokio-tungstenite = {version = "0.20.0", features = ["connect", "handshake", "native-tls"], default-features = false }
tonic = { version = "0.9.2", features = ["codegen", "prost", "transport"], default-features = false }
url = { version = "2.4.0", default-features = false }

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost", "transport"], default-features = false }